# sound-applet

./: .gitmodules  Makefile.am  autogen.sh  configure.ac
.github/: FUNDING.yml
src/: Makefile.am  main.c
